# robot_faces

./: CMakeLists.txt  README.md  animate.py  dependencies.txt  draw.py  face_display.py  package.xml  robotFace.py  setup_gcloud
launch/: faces.launch
scripts/: face_control.py
src/: README.md  animate.py  blink.py  cmudict-modified.txt  draw.py  draw_mouths.py  error.txt  face.py  robotFace.py  sawyer-demo.json  speech_animation.py  syllableizer.py  synthesizer.py  talk.py
srv/: Face.srv
